--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -37,6 +37,8 @@ dependencies:
   cupertino_icons: ^1.0.6
   google_fonts: ^6.2.1
   vrouter: ^1.2.1
+  http: ^1.2.1
+  flutter_secure_storage: ^9.2.0
 
 dev_dependencies:
   flutter_test:
