--- a/client/pubspec.yaml
+++ b/client/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   vrouter: ^1.2.1
   http: ^1.2.1
   flutter_secure_storage: ^9.2.1
+  awesome_snackbar_content: ^0.1.3
 
 dev_dependencies:
   flutter_test:
